<resources>
    <string name="app_name">Inventory</string>
    <string name="tieUserName">Nombre de usuario</string>
    <string name="tiePassword">Contraseña</string>
    <string name="tvTitle">Login</string>
    <string name="chkRemember">Recuérdame</string>
    <string name="btnSignup">Registrar</string>
    <string name="btnSignIn">Login</string>
    <string name="tvTitleSignup">Registro</string>
    <string name="tieConfirmPassword">Confirmar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tieEmail">Introduce tu email</string>
    <string name="tvLoading">Cargando...</string>
    <string name="tvNoData">Lo sentimos no hay datos</string>
    <string name="action_search">Buscar</string>
    <string name="action_help">Ayuda</string>
    <string name="action_setting">Configuración</string>
    <string name="action_about">Sobre nosotros</string>
</resources>