<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llcontainer"
    android:padding="@dimen/login_llcontainer_padding"
    tools:context=".iu.login.LoginActivity">

    <TextView
        android:id="@+id/tvTitleSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_margin_top"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/tvTitle"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUserName" />
        <requestFocus></requestFocus>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:text="@string/chkRemember" />

        <Button
            android:id="@+id/btSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="showSignUp"
            android:text="@string/btnSignup" />
    </LinearLayout>

    <Button
        android:id="@+id/btSingIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="validateUser"
        android:text="@string/btnSignIn" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_progressbar_margin_top"
        android:visibility="gone" />

    <!-- Con la propiedad android:gravity posiciono
    abajo TODOS los componentes. y con android:layout_gravity
    se ha de indicar en cada uno de ellos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/llbottombar"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/login_llbottombar_margin_bottom">


        <ImageButton
            android:id="@+id/btGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/facebook"
            android:text="Button" />

        <ImageButton
            android:id="@+id/btFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/google"
            android:text="Button" />
    </LinearLayout>
</LinearLayout>